[package]
name = "os"
version = "0.1.0"
authors = ["xin"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { path = "/home/xin/MyPro/rcore/riscv", features = ["inline-asm"] }
spin = "0.5.2"
buddy_system_allocator = "0.3"
